# bayesian-pricing

./: CITATION.cff  README.md  pyproject.toml
.github/workflows/: tests.yml
benchmarks/: benchmark.py
notebooks/: 01_hierarchical_frequency_demo.py  benchmark.py
src/bayesian_pricing/: __init__.py  _utils.py  diagnostics.py  frequency.py  relativities.py  severity.py
tests/: conftest.py  test_coverage_april2026.py  test_diagnostics.py  test_frequency.py  test_relativities.py  test_severity.py  test_utils.py
